classDiagram
    %% Clase base Persona
    class Person {
        - id: Int
        - name: String
        - email: String
        - phone: String
        - birth_date: Date
        - created_at: DateTime
        - updated_at: DateTime
    }

    %% Clases principales
    class Client {
        - address: String
        - city: String
        - state: String
    }

    class Ticket {
        - id: Int
        - seat_id: Int
        - client_id: Int
        - trip_id: Int
        - state: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Trip {
        - id: Int
        - trip_datetime: DateTime
        - driver_id: Int
        - assistant_id: Int
        - bus_id: Int
        - route_id: Int
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Route {
        - id: Int
        - origin_location_id: Int
        - destination_location_id: Int
        - distance: Float
        - duration: Float
        - price: Float
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Location {
        - id: Int
        - name: String
        - latitude: Float
        - longitude: Float
        - address: String
        - city: String
        - state: String
        - country: String
        - postal_code: String
        - description: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Bus {
        - id: Int
        - plate_number: String
        - capacity: Int
        - brand: String
        - model: String
        - year: Int
        - created_at: DateTime
        - updated_at: DateTime
    }

    class SingleDeckBus {
        - id: Int
        - capacity: Int
    }

    class DoubleDeckBus {
        - id: Int
        - capacity: Int
        - lower_deck_capacity: Int
        - upper_deck_capacity: Int
    }

    class Seat {
        - id: Int
        - bus_id: Int
        - seat_number: Int
        - deck: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Reservation {
        - id: Int
        - client_id: Int
        - trip_id: Int
        - seat_id: Int
        - status: String
        - expiration_datetime: DateTime
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Package {
        - id: Int
        - sender_id: Int
        - recipient_id: Int
        - trip_id: Int
        - weight: Float
        - dimensions: String
        - description: String
        - status: String
        - transaction_id: Int
        - created_at: DateTime
        - updated_at: DateTime
    }

    class PackageState {
        - id: Int
        - name: String
        - description: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Office {
        - id: Int
        - name: String
        - location_id: Int
        - phone: String
        - email: String
        - manager_name: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Secretary {
        - office_id: Int
        - document_id: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Driver {
        - license_number: String
        - license_type: String
        - license_expiry: Date
        - status: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Assistant {
        - document_id: String
        - created_at: DateTime
        - updated_at: DateTime
    }

    class PaymentMethod {
        - id: Int
        - name: String
        - description: String
        - is_active: Boolean
        - created_at: DateTime
        - updated_at: DateTime
    }

    class Transaction {
        - id: Int
        - client_id: Int
        - amount: Float
        - payment_method_id: Int
        - status: String
        - reference_number: String
        - payment_date: DateTime
        - created_at: DateTime
        - updated_at: DateTime
    }

    class User {
        - username: String
        - password_hash: String
        - role: String
        - is_active: Boolean
        - created_at: DateTime
        - updated_at: DateTime
    }

    %% Relaciones (herencia, composición, agregación y demás)
    Person <|-- Client
    Person <|-- Secretary
    Person <|-- Driver
    Person <|-- Assistant

    Client "1" -- "*" Ticket : purchases
    Client "1" -- "*" Reservation : reserves
    Client "1" -- "*" Package : sends/receives
    Client "1" -- "*" Transaction : makes

    Trip "1" o-- "*" Ticket : (Agregación)  
    Ticket "1" -- "1" Seat : occupies
    Ticket "1" -- "1" Transaction : paid via

    Reservation "*" -- "1" Trip : linked to
    Reservation "1" -- "1" Seat : reserves

    Trip "1" -- "1" Route : follows
    Trip "1" -- "1" Bus : assigned to
    Trip "1" -- "1" Driver : driven by
    Trip "0..1" -- "1" Assistant : assisted by
    Trip "1" -- "1" Secretary : dispatched by
    Trip "*" -- "*" Seat : uses>seats  %% Relación normal (no es composición ni agregación para seats en Trip)

    Route "1" -- "1" Location : starts from
    Route "1" -- "1" Location : ends at

    Bus "1" *-- "*" Seat : (Composición)

    Package "*" -- "1" Trip : transported in
    Package "1" -- "1" Transaction : paid via
    Package "1" -- "1" PackageState : has status

    Secretary "1" -- "*" Ticket : sells
    Secretary "1" -- "*" Package : handles
    Secretary "1" -- "*" Trip : dispatches
    Secretary "1" -- "1" Office : works in
    Secretary "1" -- "1" User : has account

    Office "1" -- "*" Secretary : employs
    Office "1" -- "1" Location : located at

    Transaction "1" -- "1" PaymentMethod : used via

    Bus <|-- SingleDeckBus
    Bus <|-- DoubleDeckBus

    %% Notas
    note for Seat "Composición con Bus:\nsi se elimina el Bus, se eliminan los Seats"
    note for Ticket "Agregación con Trip:\nlos Tickets pueden sobrevivir sin el Trip"
    note for Reservation "Incluye expiración y estado"
    note for User "Para autenticación y autorización"
    note for PackageState "Clasifica el estado de los paquetes"
